文章search接口接入ES；加入USER和ADMIN权限