@@ -10,13 +10,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 
 /**
  * JWT认证过滤器
@@ -36,21 +36,28 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             // 从请求中提取JWT
             String jwt = getJwtFromRequest(request);
             // 验证JWT并设置用户信息到ThreadLocal
-            if (StringUtils.hasText(jwt) && jwtTokenUtil.validateToken(jwt)) {
+            if (StringUtils.hasText(jwt) && jwtTokenUtil.validateToken(jwt) && jwtTokenUtil.isAccessToken(jwt)) {
                 Long userId = jwtTokenUtil.getUserIdFromToken(jwt);
                 String username = jwtTokenUtil.getUsernameFromToken(jwt);
                 User principal = new User();
                 principal.setId(userId);
                 principal.setUserId(username);
 
+                String principalType = jwtTokenUtil.getPrincipalTypeFromToken(jwt);
+                String role = JwtTokenUtil.PRINCIPAL_TYPE_ADMIN.equals(principalType)
+                        ? "ROLE_ADMIN" : "ROLE_USER";
+
                 // 设置Spring Security认证信息
-                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(principal, null, Collections.emptyList());
+                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                        principal, null, List.of(new SimpleGrantedAuthority(role)));
                 SecurityContextHolder.getContext().setAuthentication(authentication);
             }
-            filterChain.doFilter(request, response);
         } catch (Exception ex) {
             log.error("无法设置用户认证信息", ex);
         }
+        // 只捕获 JWT 解析异常；后续授权异常必须继续传递给 Spring Security，
+        // 否则无权访问可能被吞掉而无法正确返回 401/403。
+        filterChain.doFilter(request, response);
     }
     
     private String getJwtFromRequest(HttpServletRequest request) {
